PostGIS 2.3.8
2018/xx/xx

  * Bug Fixes and Enchantments

  - #4071, ST_ClusterKMeans crash on NULL/EMPTY fixed (Darafei Praliaskouski)
  - #4074, Disable interrupt tests by default (Regina Obe)

PostGIS 2.3.7
2018/04/06

  * Bug Fixes and Enhancements

  - #3055, [raster] ST_Clip() on a raster without band crashes the server
          (Regina Obe)
  - #3978, Fix KNN when upgrading from 2.1 or older (Sandro Santilli)
  - #4003, lwpoly_construct_circle: Avoid division by zero (Raúl Marín Rodríguez)
  - #4017, lwgeom lexer memory corruption (Peter E)
  - #4020, Casting from box3d to geometry now returns correctly connected
           PolyhedralSurface (Matthias Bay)
  - #4025, #4032 Incorrect answers for temporally "almost overlapping" ranges
           in ST_ClosestPointOfApproach and ST_CPAWithin
           (Paul Ramsey, Darafei Praliaskouski)
  - #4052, schema qualify several functions in geography (Regina Obe)


PostGIS 2.3.6
2018/01/17

  * Bug Fixes and Enhancements

  - #3713, Support encodings that happen to output a '\' character
  - #3822, Have postgis_full_version() also show and check version of
           PostgreSQL the scripts were built against (Sandro Santilli)
  - #3965, ST_ClusterKMeans used to lose some clusters on initialization
           (Darafei Praliaskouski)
  - #3956, Brin opclass object does not upgrade properly (Sandro Santilli)
  - #3982, ST_AsEncodedPolyline supports LINESTRING EMPTY and MULTIPOINT EMPTY
           (Darafei Praliaskouski)
  - #3975, ST_Transform runs query on spatial_ref_sys without schema
           qualification. May cause restore issues. (Paul Ramsey)

PostGIS 2.3.5
2017/11/15

  * Bug Fixes and Enhancements

  - #3667, Fix for bug in geography ST_Segmentize
  - #3926, Add missing 2.2.6 upgrade path

PostGIS 2.3.4
2017/10/18

  * Bug Fixes and Enhancements

  - PostgreSQL 10 support
  - #3782, Memory leak in lwline_from_wkb_state (Even Rouault)
  - #3101, Fix buffer overflow in pgsql2shp (Sandro Santilli)